[gd_scene load_steps=9 format=3 uid="uid://bgr4nq5o17pmh"]

[ext_resource type="Script" path="res://Scripts/InputTest.gd" id="1_si3e4"]
[ext_resource type="Texture2D" uid="uid://bwy0ukd6nqpv5" path="res://Placeholders/Circle.png" id="2_72rom"]
[ext_resource type="Texture2D" uid="uid://dfjoeme16oowv" path="res://Art/sprites/goobers-1 2.PNG" id="2_gify4"]
[ext_resource type="Texture2D" uid="uid://dc6qvslkcggxi" path="res://Art/sprites/goobers-2 2.PNG" id="3_xgrwr"]

[sub_resource type="Curve" id="Curve_fcyqv"]
min_value = -1.0
_data = [Vector2(0, 2.13163e-14), 0.0, 0.0, 0, 0, Vector2(0.238948, 1), 0.0, 0.0, 0, 0, Vector2(0.497415, -0.0211756), 0.0, 0.0, 0, 0, Vector2(0.766221, -1), 0.0, 0.0, 0, 0, Vector2(1, 2.13163e-14), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnnjl"]
size = Vector2(64, 85)

[sub_resource type="CircleShape2D" id="CircleShape2D_wh5jr"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4eusl"]

[node name="PlaceholderPlayer" type="RigidBody2D" groups=["Player"]]
position = Vector2(250, 2.08165e-12)
collision_layer = 2
collision_mask = 3
continuous_cd = 1
max_contacts_reported = 1
contact_monitor = true
lock_rotation = true
script = ExtResource("1_si3e4")
move_speed = 250.0
jump_speed = 500.0
arm_move_speed = 5.0
grab_speed = 20.0
arm_length = 150.0
drop_threshold = 100.0
wiggle_curve = SubResource("Curve_fcyqv")
wiggle_intensity = 2.0
wiggle_time = 0.5
legs_path = NodePath("Legs")
head_path = NodePath("Head")
head_bob = 2.0
playerID = "p1"
hand_path = NodePath("HandMeta")
arm_path = NodePath("Arm")
metadata/grabbable = true
metadata/grabbed = false

[node name="Head" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(0.048, 0.048)
texture = ExtResource("2_gify4")

[node name="Legs" type="Sprite2D" parent="."]
position = Vector2(0, 36)
scale = Vector2(0.04, 0.04)
texture = ExtResource("3_xgrwr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_dnnjl")

[node name="Arm" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)

[node name="HandMeta" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandMeta"]
shape = SubResource("CircleShape2D_wh5jr")

[node name="Hand" type="Sprite2D" parent="HandMeta"]
z_index = 2
texture_filter = 1
scale = Vector2(0.01, 0.01)
texture = ExtResource("2_72rom")

[node name="GrabArea" type="Area2D" parent="HandMeta"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandMeta/GrabArea"]
shape = SubResource("CircleShape2D_4eusl")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="HandMeta/GrabArea" to="." method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="HandMeta/GrabArea" to="." method="_on_grab_area_body_exited"]
